--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "mlproj",
-  "version": "0.23.0",
-  "description": "Project management for MarkLogic",
-  "repository": "https://github.com/fgeorges/mlproj",
-  "main": "src/tui.js",
-  "bin": {
-    "mlproj": "src/tui.js"
-  },
+  "name": "mlproj-core",
+  "version": "0.1.0",
+  "description": "Project management for MarkLogic, core implementation",
+  "repository": "https://github.com/fgeorges/mlproj-core",
+  "main": "index.js",
   "scripts": {
     "test": "./test/run-tests.js"
   },
   "author": "Florent Georges",
   "license": "ISC",
-  "dependencies": {
-    "chalk": "^1.1.3",
-    "commander": "^2.9.0",
-    "readline-sync": "^1.4.6",
-    "request": "^2.79.0",
-    "xml2js": "^0.4.17"
-  },
   "devDependencies": {
+    "chalk": "^1.1.3",
     "mockery": "^2.0.0"
   }
 }
