--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "Florent Georges",
   "license": "ISC",
   "devDependencies": {
-    "chalk": "^1.1.3",
-    "mockery": "^2.0.0"
+    "chalk": "^1.1.3"
   }
 }
