--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Florent Georges",
   "license": "ISC",
   "devDependencies": {
-    "chalk": "^1.1.3"
+    "chalk": "^1.1.3",
+    "xml2js": "^0.4.17"
   },
   "dependencies": {
     "minimatch": "^3.0.4"
