--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "chalk": "^1.1.3",
-    "xml2js": "^0.4.17"
+    "xml2js": "^0.4.17",
+    "debug": "^3.1.0"
   },
   "dependencies": {
   }
