Add keywords to the NPM package.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "scripts": {
     "test": "./test/run-tests.js"
   },
+  "keywords": [
+    "mlproj",
+    "marklogic",
+    "nosql"
+  ],
   "author": "Florent Georges",
   "license": "ISC",
   "devDependencies": {
